<resources>
    <string name="app_name">DSLIVE</string>
    <string name="facebook_app_id">874383896560753</string>
    <string name="fb_login_protocol_scheme">fb874383896560753</string>
    <string name="count_clips" formatted="false">%s clips</string>
    <string name="image">Image</string>
    <string name="dummytext">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="whaitis_rcoin">1.When you receive gifts from Rayzi, like a Lamborghini or Castle, you immediately earn the same amount of Rcoins as the gift\'s price in the Gift Store.\n\n2.You can convert Rcoins to both diamonds and cash.\n\n3.Rcoins balance = Available + Withdrawing\n</string>
    <string name="bio">𝐋𝐢𝐟𝐞 𝐝𝐨𝐞𝐬𝐧’𝐭 𝐚𝐥𝐰𝐚𝐲𝐬 𝐠𝐢𝐯𝐞 𝐮 𝐚 𝐬𝐞𝐜𝐨𝐧𝐝 𝐜𝐡𝐚𝐧𝐜𝐞🤗💞💙 𝐔 𝐧𝐞𝐯𝐞𝐫 𝐠𝐞𝐭 𝐚 𝐬𝐞𝐜𝐨𝐧𝐝 𝐜𝐡𝐚𝐧𝐜𝐞 𝐭𝐨 𝐜𝐫𝐞𝐚𝐭𝐞 𝐭𝐡𝐞 𝐟𝐢𝐫𝐬𝐭 𝐢𝐦𝐩𝐫𝐞𝐬𝐬𝐢𝐨𝐧😊💛💚💜 𝐒𝐨 𝐦𝐚𝐤𝐞 𝐮𝐫 𝐟𝐢𝐫𝐬𝐭 𝐜𝐡𝐚𝐧𝐜𝐞 𝐜𝐨𝐮𝐧𝐭☺️💝💖❤️</string>
    <string name="dummyname">Mia Malkova</string>
    <string name="timer_hint">To cancel timer before it starts, click here.</string>
    <string name="mmss">00:00</string>
    <string name="sound_hint">Click to choose a song.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="notification_preview_description">This will take just a few moments.</string>
    <string name="policy">By Signing up you will be agree to our</string>
    <string name="notification_preview_title">Preparing for upload…</string>
    <string name="notification_upload_description">Just a few moments before it goes on air.</string>
    <string name="notification_upload_title">Uploading Relite…</string>
    <string name="notification_upload_failed_description">The video has to been saved to drafts.</string>
    <string name="notification_upload_failed_title">Failed to upload.</string>
    <string name="notification_watermark_description">This will take a while, we\'ll notify you when done.</string>
    <string name="notification_watermark_title">Optimizing clip…</string>
    <string name="audio_from_clip">Custom audio from clip.</string>
    <string name="browse_file_title">Browse file</string>
    <string name="cancel_button">Cancel</string>
    <string name="message_song_change">You cannot change songDummy after recording has started.</string>
    <string name="message_song_select">You cannot select songDummy after recording has started.</string>
    <string name="message_trim_too_long" formatted="false">Please select no more that %d seconds to cut.</string>
    <string name="message_trim_too_short" formatted="false">Please select at least %d seconds to cut.</string>
    <string name="notification_channel_name">Default</string>
    <string name="notification_download_description">Should not taker longer than a few seconds.</string>
    <string name="notification_download_title">Download file…</string>
    <string name="pan_audio_hint">You may use this option to synchronize audio and video by adjusting audio to start a little earlier or later.</string>
    <string name="progress_title">Please wait…</string>
    <string name="permission_rationale_upload">To pick and upload video from Gallery, storage permission is needed.</string>
    <string name="recorder_error_in_progress">To do this, please stop recording first.</string>
    <string name="recorder_error_maxed_out">You have already recorded for maximum duration.</string>
    <string name="recorder_error_no_clips">Please record your clip first to continue.</string>
    <string name="song_volume_label">song volume</string>
    <string name="Copied_successfully">Copied Successfully..</string>
    <string name="video_volume_label">video volume</string>
    <string name="notification_channel_id">default</string>
    <string name="confirmation_delete_draft">Do you really want to permanently delete this draft clip? It cannot be undone.</string>
    <string name="uploading_message">Your clip will be uploaded shortly.</string>
    <string name="per_deny">Need permission !</string>
    <string name="cancel">Cancel</string>
    <string name="permission_explain_camera">Camera access is required to start a video conference.</string>
    <string name="permission_explain_gallery">Photos access is required to send images.</string>
    <string name="permission_explain_camera_mic">Permission required.</string>
    <string name="settings_camera">Please go to system settings to allow camera access. </string>
    <string name="settings_images">Please go to system settings to allow photos access. </string>
    <string name="settings_camera_mic">Please go to system settings to allow camera and images access.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="incoming_call">Incoming call …</string>
    <string name="calling">Calling…</string>
    <string name="redeem_your_rcoins">Redeem Your Rcoins</string>
    <string name="enter_rcoins_to_withdraw">Enter Rcoins to Withdraw</string>
    <string name="withdrawable_rcoins_10">Withdrawable Rcoins 10</string>
    <string name="_100_rcoins">100 Rcoins</string>
    <string name="equal">=</string>
    <string name="_1_inr">1 INR</string>
    <string name="enter_details_here">Enter Details Here…</string>
    <string name="submit">Submit</string>
    <string name="type_a_message">Type a Message…</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="status">Status :</string>
    <string name="open">OPEN</string>
    <string name="_6_min">6 min</string>
    <string name="email">email</string>
    <string name="image2">Image :</string>
    <string name="close">CLOSE</string>
    <string name="my_tickets">My Tickets</string>
    <string name="complaint_or_suggestion">Complaint or Suggestion</string>
    <string name="typing_somethings">Typing Somethings...</string>
    <string name="contact">Contact</string>
    <string name="enter_your_mobile_number_or_email">Enter Your Mobile Number Or Email</string>
    <string name="attach_your_image_or_screenshot">Attach Your Image or Screenshot</string>
    <string name="browse">Browse</string>
    <string name="cover_image">Cover Image</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_age">Enter Age</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_bio">Enter Bio :</string>
    <string name="enter_bio_here">Enter Bio here</string>
    <string name="select_gender">Select Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send">Send</string>
    <string name="add_a_comment">Add a Comment...</string>
    <string name="my_posts">My Posts</string>
    <string name="next">Next</string>
    <string name="select_filter">Select Filter</string>
    <string name="my_fans">My Fans</string>
    <string name="free_diamonds">Free Diamonds</string>
    <string name="method_1">Method 1</string>
    <string name="method_2">Method 2</string>
    <string name="your_refer_code">Your Refer Code:</string>
    <string name="invite_your_friends_for_each_payout_of_invited_friends_you_and_your_friend_both_will_receive_200_diamonds">Invite your Friends! for each payout of invited friends, you and your friend both will receive 200 Diamonds.</string>
    <string name="you_already_referred">You Already Referred</string>
    <string name="enter_referral_code_here">Enter Referral code here</string>
    <string name="go_live">Go Live</string>
    <string name="flip">Flip</string>
    <string name="flash">Flash</string>
    <string name="speed">Speed</string>
    <string name="filters">Filters</string>
    <string name="sticker">Sticker</string>
    <string name="timer">Timer</string>
    <string name="preview">Preview</string>
    <string name="following">Following</string>
    <string name="fans">Fans</string>
    <string name="lv">Lv.</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="diamond_record">Diamond Record</string>
    <string name="start_date">Start Date</string>
    <string name="_1999_29">1999/29</string>
    <string name="end_date">End Date</string>
    <string name="income">Income</string>
    <string name="_0">0</string>
    <string name="spending">Spending</string>
    <string name="no_one_joined">No one Joined</string>
    <string name="_00_00">00:00</string>
    <string name="_public">Public</string>
    <string name="live_show_ended">Live show ended</string>
    <string name="joined_users">Joined Users</string>
    <string name="live_duration">Live Duration</string>
    <string name="received_gifts">Received Gifts</string>
    <string name="comments">Comments</string>
    <string name="increased_fans">Increased Fans</string>
    <string name="rcoins">Rcoins</string>
    <string name="back_to_the_homepage">Back to the homepage</string>
    <string name="add_location">Add Location</string>
    <string name="search_area_or_city">Search Area or city</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition ]]></string>
    <string name="and">and </string>
    <string name="privacy_policy">  Privacy Policy</string>
    <string name="your_level">Your Level</string>
    <string name="you_spent">You Spent</string>
    <string name="notification">Notification</string>
    <string name="level_1">Level. 1</string>
    <string name="my_wallet">My Wallet</string>
    <string name="coin_history">Coin History</string>
    <string name="my_relites">My Relites</string>
    <string name="become_vip">Become VIP</string>
    <string name="have_an_issue">Have an Issue</string>
    <string name="my_complains">My Complains</string>
    <string name="searching_for_new_friends">Searching for new Friends...</string>
    <string name="call_now">Call Now</string>
    <string name="match_again">Match again</string>
    <string name="go_meet_people_around_the_world">Go meet people around the world</string>
    <string name="diamonds">Diamonds</string>
    <string name="record">Record</string>
    <string name="outcome">Outcome</string>
    <string name="r_coins">R-Coins</string>
    <string name="search">Search</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="select_song">Select Song</string>
    <string name="choose_sticker">Choose Sticker</string>
    <string name="crop_video">Crop Video</string>
    <string name="upload_relite">Upload Relite</string>
    <string name="post">Post</string>
    <string name="add_caption_with_hashtags_and_mentions">Add Caption with hashtags and mentions</string>
    <string name="location">Location</string>
    <string name="report_this_user">Report This User</string>
    <string name="who_show_this_postdummy">Who show this postDummy ?</string>
    <string name="only_followers">Only Followers</string>
    <string name="please_describe_your_issue_here">Please Describe your issue here..</string>
    <string name="are_you_sure_you_want_to_delete_it">Are you sure, you want to delete it ??</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="do_you_want_to_exit">Do You Want To Exit ?</string>
    <string name="discard_entire_video">Discard Entire video ?</string>
    <string name="if_you_go_back_now_you_will_lose_all_the_clips_added_to_your_video">If you go back now, you will lose all the clips added to your video</string>
    <string name="discard_video">Discard Video</string>
</resources>