<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/abold"
            android:gravity="center"
            android:text="@string/who_show_this_postdummy"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".3dp"
            android:background="@color/grayinsta" />

        <TextView
            android:id="@+id/tvPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/abold"
            android:text="@string/_public"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".3dp"
            android:background="@color/grayinsta" />

        <TextView
            android:id="@+id/tvOnlyFollowr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/abold"
            android:text="@string/only_followers"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

</layout>