<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        tools:context=".user.activity.TickitDetailActivity">

        <RelativeLayout
            android:id="@+id/lyttop"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/abold"
                android:text="@string/ticket_details"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:onClick="onClickBack"
                android:padding="5dp"
                android:src="@drawable/ic_back"
                app:tint="@color/black" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyttop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/abold"
                            android:text="@string/status"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10sp"
                            android:background="@color/red"
                            android:fontFamily="@font/alight"
                            android:paddingHorizontal="10sp"
                            android:text="@string/open"
                            android:textAllCaps="true"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/amidum"
                        android:text="@string/_6_min"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/alight"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10sp"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/amidum"
                            android:text="@string/dummytext"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/amidum"
                            android:text="@string/image2"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/imageview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="400dp"
                            android:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_round_pink"
                    android:fontFamily="@font/amidum"
                    android:onClick="onClickBack"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="7dp"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </ScrollView>

        <include layout="@layout/layout_no_internet" />

    </RelativeLayout>

</layout>