<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/delete"
                app:tint="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/amidum"
                android:text="@string/are_you_sure_you_want_to_delete_it"
                android:textColor="@color/gray_icon"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp">

                <Button
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_10dp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/no"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_10dp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/yes"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>