<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/black_back"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/pinkbg"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/abold"
                    android:gravity="center"
                    android:text="@string/discard_entire_video"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/amidum"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/if_you_go_back_now_you_will_lose_all_the_clips_added_to_your_video"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".3dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/blacklight" />

                <TextView
                    android:id="@+id/btncountinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/abold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/discard_video"
                    android:textColor="@color/pink"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".3dp"
                    android:background="@color/blacklight" />

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/abold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>